--- a/src/Telas/Tela_Principal.form
+++ b/src/Telas/Tela_Principal.form
@@ -186,7 +186,7 @@
     </Component>
     <Component class="java.awt.Button" name="button2">
       <Properties>
-        <Property name="label" type="java.lang.String" value="Mostrar Tdos"/>
+        <Property name="label" type="java.lang.String" value="Mostrar Todos"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button2ActionPerformed"/>
