--- a/src/Telas/Tela_Deletar_Volume_Hq.form
+++ b/src/Telas/Tela_Deletar_Volume_Hq.form
@@ -89,11 +89,14 @@
     <Component class="javax.swing.JComboBox" name="jComboBox2">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="7">
+            <StringItem index="0" value="Portugues"/>
+            <StringItem index="1" value="Japon&#xea;s"/>
+            <StringItem index="2" value="Ingl&#xea;s"/>
+            <StringItem index="3" value="Italiano"/>
+            <StringItem index="4" value="Espanhol"/>
+            <StringItem index="5" value="Holand&#xea;s"/>
+            <StringItem index="6" value="Franc&#xea;s"/>
           </StringArray>
         </Property>
       </Properties>
