--- a/src/Telas/Tela_Principal.form
+++ b/src/Telas/Tela_Principal.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
@@ -27,26 +27,26 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="button6" alignment="0" min="-2" pref="112" max="-2" attributes="0"/>
-                                  <Component id="button8" alignment="0" min="-2" pref="112" max="-2" attributes="0"/>
-                                  <Component id="button4" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <Component id="button_Adicionar_Manga" alignment="0" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <Component id="button_Pesquisar_Manga" alignment="0" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <Component id="button_Deletar_Volumes_Manga" min="-2" pref="112" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="button3" min="-2" pref="112" max="-2" attributes="0"/>
-                                  <Component id="button1" min="-2" pref="112" max="-2" attributes="0"/>
-                                  <Component id="button9" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <Component id="button_Pesquisar_Hq" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <Component id="button_Adicionar_Hq" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <Component id="button_Deletar_Volumes_Hq" min="-2" pref="112" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="button5" pref="112" max="32767" attributes="0"/>
-                                  <Component id="button2" max="32767" attributes="0"/>
+                                  <Component id="button_Deletar_Colecao_Manga" pref="112" max="32767" attributes="0"/>
+                                  <Component id="button_Mostrar_Todos_Manga" pref="112" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="button10" pref="112" max="32767" attributes="0"/>
-                                  <Component id="button7" max="32767" attributes="0"/>
+                                  <Component id="button_Deletar_Colecao_Hq" pref="112" max="32767" attributes="0"/>
+                                  <Component id="button_Mostrar_Todos_Hq" pref="112" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -72,31 +72,31 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="button6" min="-2" pref="49" max="-2" attributes="0"/>
-                  <Component id="button1" min="-2" pref="49" max="-2" attributes="0"/>
+                  <Component id="button_Adicionar_Manga" min="-2" pref="49" max="-2" attributes="0"/>
+                  <Component id="button_Adicionar_Hq" min="-2" pref="49" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="button8" min="-2" pref="49" max="-2" attributes="0"/>
-                  <Component id="button3" min="-2" pref="49" max="-2" attributes="0"/>
+                  <Component id="button_Pesquisar_Manga" min="-2" pref="49" max="-2" attributes="0"/>
+                  <Component id="button_Pesquisar_Hq" min="-2" pref="49" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="button4" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="button_Deletar_Volumes_Manga" min="-2" pref="49" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="button5" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="button_Deletar_Colecao_Manga" min="-2" pref="49" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="button9" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="button_Deletar_Volumes_Hq" min="-2" pref="49" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="button10" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="button_Deletar_Colecao_Hq" min="-2" pref="49" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="button2" pref="49" max="32767" attributes="0"/>
-                  <Component id="button7" max="32767" attributes="0"/>
+                  <Component id="button_Mostrar_Todos_Manga" pref="49" max="32767" attributes="0"/>
+                  <Component id="button_Mostrar_Todos_Hq" pref="49" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
           </Group>
@@ -104,36 +104,36 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="java.awt.Button" name="button10">
+    <Component class="java.awt.Button" name="button_Deletar_Colecao_Hq">
       <Properties>
         <Property name="label" type="java.lang.String" value="Deletar Cole&#xe7;&#xe3;o"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button10ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Deletar_Colecao_HqActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button9">
+    <Component class="java.awt.Button" name="button_Deletar_Volumes_Hq">
       <Properties>
         <Property name="label" type="java.lang.String" value="Deletar Volumes"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button9ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Deletar_Volumes_HqActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button8">
+    <Component class="java.awt.Button" name="button_Pesquisar_Manga">
       <Properties>
         <Property name="label" type="java.lang.String" value="Pesquisar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button8ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Pesquisar_MangaActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button6">
+    <Component class="java.awt.Button" name="button_Adicionar_Manga">
       <Properties>
         <Property name="label" type="java.lang.String" value="Adicionar Manga"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button6ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Adicionar_MangaActionPerformed"/>
       </Events>
     </Component>
     <Component class="java.awt.Label" name="label2">
@@ -152,52 +152,52 @@
         <Property name="text" type="java.lang.String" value="Manga"/>
       </Properties>
     </Component>
-    <Component class="java.awt.Button" name="button1">
+    <Component class="java.awt.Button" name="button_Adicionar_Hq">
       <Properties>
         <Property name="label" type="java.lang.String" value="Adicionar HQ"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Adicionar_HqActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button3">
+    <Component class="java.awt.Button" name="button_Pesquisar_Hq">
       <Properties>
         <Property name="label" type="java.lang.String" value="Pesquisar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button3ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Pesquisar_HqActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button4">
+    <Component class="java.awt.Button" name="button_Deletar_Volumes_Manga">
       <Properties>
         <Property name="label" type="java.lang.String" value="Deletar Volumes"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button4ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Deletar_Volumes_MangaActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button5">
+    <Component class="java.awt.Button" name="button_Deletar_Colecao_Manga">
       <Properties>
         <Property name="label" type="java.lang.String" value="Deletar Cole&#xe7;&#xe3;o"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button5ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Deletar_Colecao_MangaActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button2">
+    <Component class="java.awt.Button" name="button_Mostrar_Todos_Manga">
       <Properties>
         <Property name="label" type="java.lang.String" value="Mostrar Todos"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Mostrar_Todos_MangaActionPerformed"/>
       </Events>
     </Component>
-    <Component class="java.awt.Button" name="button7">
+    <Component class="java.awt.Button" name="button_Mostrar_Todos_Hq">
       <Properties>
         <Property name="label" type="java.lang.String" value="Mostrar Todos"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button7ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_Mostrar_Todos_HqActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
